--- a/src/Pages/Dashboard/dashboard.styles.scss
+++ b/src/Pages/Dashboard/dashboard.styles.scss
@@ -1,16 +1,52 @@
 .dash-con {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
-  left: 200px;
+  height: 100vh;
+  left: 15%;
   padding: 20px;
   display: grid;
   grid-template-columns: 400px 400px 300px;
-  grid-template-rows: 100px 200px;
+  grid-gap: 20px;
+}
+.slideshow {
+  position: absolute;
+  height: 34vh;
+  width: 80vw;
+  top: 50px;
+  left: 40px;
+  transition: 0.5s;
+}
+.games-card.slide {
+  transition: 0.5s;
+}
+.games-card.slide:hover {
+  transform: scale(1.03);
+  transition: 0.2s;
+  opacity: 0.9;
+}
+.nedd {
+  visibility: hidden;
+}
+.button-scroll {
+  position: absolute;
+}
+
+.button-scroll.but1 {
+  position: absolute;
+  top: 35%;
+  left: 1%;
+}
+
+.button-scroll.but2 {
+  position: absolute;
+  left: 40%;
+  top: 35%;
 }
 
 .aaa-aaa {
   border-radius: 12px;
+  cursor: pointer;
+  transition: 0.5s;
 
   &.aaa-aaa:hover {
     transform: scale(1.03);
@@ -21,7 +57,6 @@
 
 .games-card {
   position: relative;
-  margin: 15px;
   border-radius: 8px;
   background: #ffffff;
   box-shadow: inset 14px 14px 28px #b0c1c8, inset -14px -14px 28px #acacac;
@@ -29,11 +64,12 @@
   width: 350px;
 
   &.card-4 {
-    position: relative;
+    position: absolute;
     top: 300px;
-    right: 380px;
+    left: 20px;
     width: 80vw;
     height: 50vh;
+    padding: 16px;
     background: linear-gradient(225deg, #aebfc6, #cfe3eb);
     box-shadow: -3px 3px 6px #b0c1c8, 3px -3px 6px #d2e7f0;
   }
@@ -41,10 +77,10 @@
 
 .inner-card {
   position: relative;
-  display: grid;
-  grid-template-columns: 300px 300px 300px 300px;
-  grid-gap: 10px;
-  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 40px;
   overflow: hidden;
 }
 
@@ -98,6 +134,12 @@
   display: grid;
   grid-gap: 30px;
   border-radius: 10px;
+  cursor: pointer;
+}
+.fav-cards:hover {
+  transform: scale(1.03);
+  transition: 0.2s;
+  opacity: 0.8;
 }
 
 .card-prime {
@@ -124,4 +166,26 @@
 .left-arrow {
   position: absolute;
   cursor: pointer;
+}
+
+.remove-button {
+  background: linear-gradient(225deg, #aebfc6, #cfe3eb);
+  border-radius: 10px;
+  border: 0px solid black;
+  width: 20px;
+}
+
+.remove-button-contain {
+  position: relative;
+  right: 22px;
+  top: 1px;
+  float: right;
+  z-index: 20;
+}
+
+.remove-button:hover {
+  transform: scale(1.03);
+  transition: 0.2s;
+  opacity: 0.9;
+  background: linear-gradient(225deg, #48626e, #cfe3eb);
 }
