--- a/src/characterRow.styles.scss
+++ b/src/characterRow.styles.scss
@@ -1,16 +1,14 @@
 .Card-contain {
-    display: grid;
-       grid-template-columns: 1fr 1fr 1fr;
-       grid-auto-rows: minmax(150px, auto);
+  display: grid;
+  grid-template-columns: 420px 420px 420px;
+  grid-auto-rows: minmax(150px, auto);
+  border-radius: 12px;
 }
-        
-
-       
 
 .buttuh {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    left: 40%;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  left: 40%;
 }
