--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -3,21 +3,17 @@
   flex-direction: column;
   background-color: whitesmoke;
   width: 200px;
-  height: 150vh;
-  align-items: flex-start;
   position: absolute;
 
   .sidebar-item {
     display: flex;
     justify-content: center;
-    padding: 40px 0;
-    width: 100%;
     color: black;
     text-decoration: none;
+    padding: 10px;
 
     &:hover {
-      color: black;
-      border-radius: 2px;
+      color: white;
       background: linear-gradient(225deg, #aebfc6, #cfe3eb);
       box-shadow: -3px 3px 6px #b0c1c8, 3px -3px 6px #d2e7f0;
       width: 200px;
@@ -39,7 +35,7 @@
     align-items: center;
     justify-content: center;
     left: 50px;
-    top: 30px;
+    top: 40vh;
   }
   .pl1 {
     position: relative;
