--- a/src/Pages/Dashboard/dashboard.styles.scss
+++ b/src/Pages/Dashboard/dashboard.styles.scss
@@ -99,6 +99,7 @@
   box-shadow: -3px 3px 6px #b0c1c8, 3px -3px 6px #d2e7f0;
 }
 .games-card:hover {
+  z-index: 100;
   transform: scale(1.03);
   transition: 0.2s;
   opacity: 0.9;
